--- a/notes/css/flex骰子.html
+++ b/notes/css/flex骰子.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>flex布局实例--骰子</title>
+    <title>flex布局实例-骰子</title>
     <style type="text/css">
         *{
             margin: 0;
